# VideoFileTools

./: .gitignore  README.md  build.sh
src/: CMakeLists.txt
src/FlvEditor/: .BigEndianFlvHeaders.h.swp  BigEndianFlvHeaders.h  CMakeLists.txt  EnumUtilities.h  Enums.cpp  Enums.h  FlvHeaders.cpp  FlvHeaders.h  FlvProcessor.cpp  FlvProcessor.h  FlvTag.cpp  FlvTag.h  main.cpp
src/FlvEditor/FlvRecords/: AvcDecoderConfigurationRecord.cpp  AvcDecoderConfigurationRecord.h  AvcVideoPacketRecord.cpp  AvcVideoPacketRecord.h  FlvRecord.cpp  FlvRecord.h  FlvTagScriptDataRecord.cpp  FlvTagScriptDataRecord.h  FlvTagVideoDataRecord.cpp  FlvTagVideoDataRecord.h  ParameterSetsRecord.cpp  ParameterSetsRecord.h  RawDataRecord.cpp  RawDataRecord.h  ScriptDataObject.cpp  ScriptDataObject.h  ScriptDataObjectArray.cpp  ScriptDataObjectArray.h  ScriptDataString.cpp  ScriptDataString.h  ScriptDataValue.cpp  ScriptDataValue.h
src/FlvEncoder/: CMakeLists.txt  Encoder.cpp  Encoder.h  main.cpp
src/NaluParser/: CMakeLists.txt  Enums.h  NalUnit.cpp  NalUnit.h  NaluParser.cpp  NaluParser.h  main.cpp
src/NaluParser/NalRecords/: NalRecord.cpp  NalRecord.h  NalSPSRecord.cpp  NalSPSRecord.h
src/Utilities/: BigEndian.cpp  BigEndian.h  BitStream.cpp  BitStream.h  CMakeLists.txt
